<resources>
    <string name="app_name">Avalanche wallet</string>
    <string name="twoScreenUp">You’ve successfully\n logged in</string>
    <string name="twoScreenDown">Get to know</string>
    <string name="twoScreenDown2">Our Features</string>
    <string name="threeScreen1">secured, forever.</string>
    <string name="threeScreen2">High quality protection for all our clients</string>
    <string name="nextStep">NEXT STEP</string>
    <string name="fourScreen1">Privacy Safe</string>
    <string name="fourScreen2">Protect your privacy every moment</string>
    <string name="fiveScreen1">Invest in future</string>
    <string name="fiveScreen2">Easy way to invest your gold and gain more profit constantly with us</string>
    <string name="titleCreateScreen">How do you want to access your wallet?</string>

    <string name="privateScreenDownText"><u>Terms Of Use</u></string>

    <string name="Import"><u>Import</u></string>

    <string name="buyScreenStrpOne"><b>STEP 1:</b> Type amount you want to buy</string>
    <string name="buyScreenStrpTwo"><b>STEP 2:</b> Enter Card Details</string>
</resources>