<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryColor"
    tools:context=".OpenWallet.TwoWallet">


    <LinearLayout
        android:id="@+id/textScreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100sp"
        android:orientation="vertical"
        android:paddingTop="50sp">

        <ImageView
            android:id="@+id/safe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/textScreen"
            android:src="@drawable/safeboxpng" />

        <TextView
            android:id="@+id/headText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50sp"
            android:fontFamily="@font/montserrat_extrabold"
            android:gravity="center"
            android:text="@string/fourScreen1"
            android:textAllCaps="true"
            android:textColor="@color/twoPrimaryColor"
            android:textSize="26sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/headText"
            android:layout_marginLeft="40sp"
            android:layout_marginTop="20sp"
            android:layout_marginRight="40sp"
            android:fontFamily="@font/montserrat_bold"
            android:gravity="center"
            android:text="@string/fourScreen2"
            android:textColor="@color/tempGray"
            android:textSize="16sp"
            android:textStyle="bold" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="80sp"
        android:gravity="right"
        android:paddingRight="30sp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="25sp"
            android:gravity="center"
            android:text="@string/nextStep"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/clickIntent"
            android:layout_width="wrap_content"
            android:layout_height="60sp"
            android:backgroundTint="@color/primaryColor"
            android:src="@drawable/ic_clicknext" />

    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="25sp"
        android:src="@drawable/indecatortwo" />


</RelativeLayout>