<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryColor"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_marginTop="70sp"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:gravity="center"
            android:textSize="24sp"
            android:textStyle="bold"
            android:lineSpacingExtra="4sp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/twoScreenUp"/>

        <ImageView
            android:layout_marginTop="50sp"
            android:layout_gravity="center"
            android:src="@drawable/ic_splash"
            android:layout_width="160sp"
            android:layout_height="190sp"/>

    </LinearLayout>

    <LinearLayout
        android:paddingRight="30sp"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:gravity="right"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textColor="@color/white"
            android:text="@string/twoScreenDown"
            android:fontFamily="@font/montserrat_extrabold"
            android:gravity="right"
            android:textSize="36sp"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:textColor="@color/white"
                android:text="about "
                android:fontFamily="@font/montserrat_extrabold"
                android:gravity="right"
                android:textSize="36sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:textColor="@color/twoPrimaryColor"
                android:text="our"
                android:fontFamily="@font/montserrat_extrabold"
                android:gravity="right"
                android:textSize="36sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


        </LinearLayout>

        <TextView
            android:textColor="@color/twoPrimaryColor"
            android:text="@string/twoScreenDown2"
            android:fontFamily="@font/montserrat_extrabold"
            android:gravity="right"
            android:textSize="36sp"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <ImageButton
            android:id="@+id/next"
            android:layout_marginBottom="80sp"
            android:layout_marginTop="50sp"
            android:layout_gravity="right"
            android:background="@color/primaryColor"
            android:src="@drawable/ic_clicknext"
            android:layout_width="wrap_content"
            android:layout_height="60sp"/>

    </LinearLayout>


</RelativeLayout>